--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Place favicon.ico in the root directory -->
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 	<!-- ========== Start Stylesheet ========== -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="assets/css/fontawesome.min.css" rel="stylesheet" />
@@ -43,9 +43,9 @@
 		<div class="main-navigation">
 			<nav id="navbar_top" class="navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="https://themetum.com/koyta/index.html">
-						<img src="assets/img/logo/logo.png" class="logo-display" alt="Itsol">
-						<img src="assets/img/logo/logo-dark.png" class="logo-scrolled" alt="Itsol">
+					<a class="navbar-brand" href="#home">
+						<img src="assets/img/logo/favicons.png" class="logo-display" alt="Itsol">
+						<img src="assets/img/logo/ma-black.png" class="logo-scrolled" alt="Itsol">
 					</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"><i class="ti-menu-alt"></i></span>
@@ -783,12 +783,6 @@
 	
   	<!-- jQuery Frameworks
     ============================================= -->
-	<script src=
-	"https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-		</script>
-		   <script src=
-		   "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-			   </script>
 	<script src="assets/js/jquery-1.12.4.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -813,22 +807,10 @@
         $(document).ready(function ($) {
             $('.open-popup').magnificPopup({
                 type: 'inline',
-  
-                // Fixed position will be used
                 fixContentPos: true,
-				
-                // Since disabled, Magnific Popup
-                // will not put close button
-                // inside content of popup
                 closeBtnInside: false,
                 preloader: false,
-  
-                // Delay in milliseconds before
-                // popup is removed
                 removalDelay: 160,
-  
-                // Class that is added to
-                // popup wrapper and background
                 mainClass: 'mfp-fade'
             });
 		});
@@ -836,5 +818,4 @@
 </body>
 
 
-<!-- Mirrored from themetum.com/koyta/koyta-two/index-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 29 Apr 2022 09:07:25 GMT -->
 </html>
