Update images and social media handles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="en">
 
 
 <head>	
@@ -114,10 +114,10 @@
 									</div>
 								</div>
 								<ul class="side-social">
-									<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-									<li><a href="#"><i class="fab fa-behance"></i></a></li>
-									<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+									<li><a href="https://twitter.com/iModupsy"><i class="fab fa-twitter"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/modupe-ade-onojobi/"><i class="fab fa-linkedin-in"></i></a></li>
+									<li><a href="https://join.skype.com/invite/HjcYhnjMpOeH"><i class="fab fa-skype"></i></a></li>
+									<li><a href="https://github.com/modupeadeonojobi"><i class="fab fa-github"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -161,7 +161,7 @@
 						</div>
 						<div class="col-xl-4">
 							<div class="hero-2-img wow fadeInRight" data-wow-duration="4s" data-wow-delay=".2s">
-								<img src="assets/img/m1.png" alt="thumb">
+								<img src="assets/img/moi-meme.png" alt="thumb">
 							</div>
 						</div>
                     </div>
@@ -179,7 +179,7 @@
 						<div class="col-xl-6">
 							<div class="about-left wow fadeInLeft" data-wow-duration="4s" data-wow-delay=".2s">
 								<div class="about-pic">
-									<img src="assets/img/m2.png" alt="thumb">
+									<img src="assets/img/moi-meme-bg.jpg" alt="thumb">
 								</div>
 							</div>
 						</div>
@@ -762,11 +762,10 @@
 						</div>
 						<div class="col-xl-4">
 							<ul class="footer-social">
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-behance"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+								<li><a href="https://twitter.com/iModupsy"><i class="fab fa-twitter"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/modupe-ade-onojobi/"><i class="fab fa-linkedin-in"></i></a></li>
+								<li><a href="https://join.skype.com/invite/HjcYhnjMpOeH"><i class="fab fa-skype"></i></a></li>
+								<li><a href="https://github.com/modupeadeonojobi"><i class="fab fa-github"></i></a></li>
 							</ul>
 						</div>
 					</div>
