--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
 										</p>
 									</div>
 									<div class="about-btns">
-										<a href="#" class="tm-btn-2">
+										<a href="assets/doc/Modupe Ade-Onojobi.pdf" download="" target="_blank" class="tm-btn-2">
 											Download CV 
 											<i class="fas fa-arrow-down"></i>
 										</a>
-										<a href="#" class="tm-btn-3">
+										<a href="assets/doc/Modupe Ade-Onojobi.pdf" target="_blank" class="tm-btn-3">
 											<i class="fas fa-print"></i> 
 											Print Cv
 										</a>
@@ -456,10 +456,10 @@
 						<div class="portfolio-grid grid-3">
 							<div class="project-box tile scale-anm web graphic" >
 								<div class="port-pic">
-									<img src="assets/img/portfolio/1.jpg" alt="thumb">
+									<img src="assets/img/portfolio/f-public-search.png" alt="thumb">
 									<div class="port-overlay">
 										<div class="port-content">
-											<h5>01. Cteative Frame</h5>
+											<h5>01. CAC Public Search</h5>
 											<span>Web Design</span>
 											<a href="#modal-01" class="open-popup">
 												<i class="fas fa-eye"></i>
@@ -559,7 +559,7 @@
 			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 			</div>
 			<div class="link-box">
-				<a href="http://www.behance.net" target="_blank">Details</a>
+				<a href="https://search.cac.gov.ng/home" target="_blank">View</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
