--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						</div>
 						<div class="col-xl-4">
 							<div class="hero-2-img wow fadeInRight" data-wow-duration="4s" data-wow-delay=".2s">
-								<img src="assets/img/moi-meme.png" alt="thumb">
+								<!-- <img src="assets/img/moi-meme.png" alt="thumb"> -->
 							</div>
 						</div>
                     </div>
@@ -251,7 +251,7 @@
 								<div class="service-content">
 									<h4>Web Development</h4>
 									<p>
-										I have been providing web design services with great success for 9 years. The client is very happy
+										Build, and maintain highly reusable and scalable code for web applications that is user-friendly and easy to use.
 									</p>
 								</div>
 							</div>
@@ -302,59 +302,47 @@
 				<div class="row">
 					<div class="col-xl-4">
 						<div class="progress-box">
-							<h5>Graphics Design <span class="pull-right">90%</span></h5>
-							<div class="progress">
-								<div class="progress-bar" role="progressbar" data-width="90"></div>
-							</div>
+							<h5>HTML & CSS</h5>
 						</div>
 						<div class="progress-box">
-							<h5>Graphics Design <span class="pull-right">90%</span></h5>
-							<div class="progress">
-								<div class="progress-bar" role="progressbar" data-width="90"></div>
-							</div>
+							<h5>JavaScript </h5>
 						</div>
 						<div class="progress-box">
-							<h5>Graphics Design <span class="pull-right">90%</span></h5>
-							<div class="progress">
-								<div class="progress-bar" role="progressbar" data-width="90"></div>
-							</div>
+							<h5>Bootstrap </h5>
+						</div>
+						<div class="progress-box">
+							<h5>PostgreSQL & Mysql</h5>
 						</div>
 					</div>
 					<div class="col-xl-4 col-lg-2">
 						<div class="progress-box">
-							<h5>Photography <span class="pull-right">80%</span></h5>
-							<div class="progress">
-								<div class="progress-bar" role="progressbar" data-width="80"></div>
-							</div>
+							<h5>Angular</h5>
 						</div>
-			
+						<div class="progress-box">
+							<h5>React</h5>
+						</div>
+						<div class="progress-box">
+							<h5>Mockito & JUnit5</h5>
+						</div>
+						<div class="progress-box">
+							<h5>Karma & Jasmine</h5>
+						</div>
 					</div>
+					
 					<div class="col-xl-4">
 						<div class="skills-section">
 							<!-- Progress Bar Start -->
 							<div class="progress-box">
-								<h5>Photography <span class="pull-right">80%</span></h5>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" data-width="80"></div>
-								</div>
+								<h5>Java</h5>
 							</div>
 							<div class="progress-box">
-								<h5>Graphics Design <span class="pull-right">90%</span></h5>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" data-width="90"></div>
-								</div>
+								<h5>Spring boot</h5>
 							</div>
 							<div class="progress-box">
-								<h5>Graphics Design <span class="pull-right">90%</span></h5>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" data-width="90"></div>
-								</div>
+								<h5>Node.js </h5>
 							</div>
 							<div class="progress-box">
-								<h5>Application Development <span class="pull-right">90%</span></h5>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" data-width="90"></div>
-								</div>
+								<h5>Express.js </h5>
 							</div>
 							<!-- End Progressbar -->
 						</div>
@@ -437,20 +425,11 @@
 							   All
 						</button>
 						<button class="btn fil-cat filter" data-rel="web" data-filter=".web">
-							UI Design
-						</button>
-						<button class="btn fil-cat filter" data-rel="flyers" data-filter=".flyers">
 							Web Development
+						</button>
+						<button class="btn fil-cat filter" data-rel="mobile" data-filter=".mobile">
+							Mobile Development
 						</button> 
-						<button class="btn fil-cat filter" data-rel="graphic" data-filter=".graphic">
-							Graphic Design
-						</button>
-						<button class="btn fil-cat filter" data-rel="wordpress" data-filter=".wordpress">
-							Wordpress
-						</button>
-						<button class="btn fil-cat filter" data-rel="illus" data-filter=".illus">
-							Illustration
-						</button>
 					</div>
 					<div id="portfolio" class="magnific-mix-gallery">
 						<div class="portfolio-grid grid-3">
@@ -468,7 +447,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm flyers wordpress">
+							<div class="project-box tile scale-anm mobile wordpress">
 								<div class="port-pic">
 									<img src="assets/img/portfolio/2.jpg" alt="thumb">
 									<div class="port-overlay">
@@ -496,7 +475,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm flyers">
+							<div class="project-box tile scale-anm mobile">
 								<div class="port-pic">
 									<img src="assets/img/portfolio/4.jpg" alt="thumb">
 									<div class="port-overlay">
