--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<nav id="navbar_top" class="navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="#home">
-						<img src="assets/img/logo/favicons.png" class="logo-display" alt="Itsol">
-						<img src="assets/img/logo/ma-black.png" class="logo-scrolled" alt="Itsol">
+						<img src="assets/img/logo.png" class="logo-display" alt="Itsol">
+						<img src="assets/img/logo.png" class="logo-scrolled" alt="Itsol">
 					</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"><i class="ti-menu-alt"></i></span>
@@ -300,7 +300,7 @@
 					<h5>My Skills / Tools</h5>
 				</div>
 				<div class="row">
-					<div class="col-xl-4">
+					<div class="col-xl-4 col-md-4">
 						<div class="progress-box">
 							<h5>HTML & CSS</h5>
 						</div>
@@ -314,7 +314,7 @@
 							<h5>PostgreSQL & Mysql</h5>
 						</div>
 					</div>
-					<div class="col-xl-4 col-lg-2">
+					<div class="col-xl-4 col-md-4">
 						<div class="progress-box">
 							<h5>Angular</h5>
 						</div>
@@ -329,7 +329,7 @@
 						</div>
 					</div>
 					
-					<div class="col-xl-4">
+					<div class="col-xl-4 col-md-4">
 						<div class="skills-section">
 							<!-- Progress Bar Start -->
 							<div class="progress-box">
@@ -357,11 +357,9 @@
 		<div class="counter-area counter-bg-2 de-padding">
 			<div class="container">
 				<div class="counter-vidz">
-					<div class="counter-wpr grid-3">
-						<div class="fun-fact">
-							<div class="fun-fact-icon">
-								<img src="assets/img/icon/c1.png" alt="thumb">
-							</div>
+					<div class="counter-wpr">
+						<div class="row">
+						<div class="fun-fact col-md-4 col-sm-6">
 							<div class="fun-desc">
 								<span class="medium">
 									Year of
@@ -371,10 +369,7 @@
 								<p class="timer" data-count="+"  data-to="2" data-speed="3000">2</p>
 							</div>
 						</div>
-						<div class="fun-fact">
-							<div class="fun-fact-icon">
-								<img src="assets/img/icon/c2.png" alt="thumb">
-							</div>
+						<div class="fun-fact col-md-4 col-sm-6">
 							<div class="fun-desc">
 								<span class="medium">
 									Digital
@@ -384,19 +379,17 @@
 								<p class="timer" data-count="+" data-to="10" data-speed="3000">10</p>
 							</div>
 						</div>
-						<div class="fun-fact">
-							<div class="fun-fact-icon">
-								<img src="assets/img/icon/c3.png" alt="thumb">
-							</div>
+						<div class="fun-fact col-md-4 col-sm-6">
 							<div class="fun-desc">
 								<span class="medium">
 									Lines of
 									<br>
 									Code
 								</span>
-								<p class="timer" data-count="+" data-to="50000" data-speed="3000">50,000</p>
+								<p class="timer" data-count="+" data-to="5" data-speed="3000">50K</p>
 							</div>
 						</div>
+					</div>
 					</div>
 				</div>
 			</div>
