Update services section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<nav id="navbar_top" class="navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="#home">
-						<img src="assets/img/logo.png" class="logo-display" alt="Itsol">
-						<img src="assets/img/logo.png" class="logo-scrolled" alt="Itsol">
+						<img src="assets/img/logo/logo.png" class="logo-display" alt="Itsol">
+						<img src="assets/img/logo/logo.png" class="logo-scrolled" alt="Itsol">
 					</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"><i class="ti-menu-alt"></i></span>
@@ -251,7 +251,7 @@
 								<div class="service-content">
 									<h4>Web Development</h4>
 									<p>
-										Build, and maintain highly reusable and scalable code for web applications that is user-friendly and easy to use.
+										Build, and maintain user-friendly and easy to use website and web application.
 									</p>
 								</div>
 							</div>
@@ -266,7 +266,7 @@
 								<div class="service-content">
 									<h4>Frontend</h4>
 									<p>
-										I have been providing web design services with great success for 9 years. The client is very happy
+										Build and maintain the client side of website and web application with highly reusable and scalable code.
 									</p>
 								</div>
 							</div>
@@ -281,7 +281,7 @@
 								<div class="service-content">
 									<h4>Backend</h4>
 									<p>
-										I have been providing web design services with great success for 9 years. The client is very happy
+										Write efficient and highly scalable code for the server side using TDD approach.
 									</p>
 								</div>
 							</div>
@@ -386,7 +386,7 @@
 									<br>
 									Code
 								</span>
-								<p class="timer" data-count="+" data-to="5" data-speed="3000">50K</p>
+								<p class="timer" data-count="+" data-to="50000" data-speed="3000">50000</p>
 							</div>
 						</div>
 					</div>
@@ -531,7 +531,7 @@
 			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 			</div>
 			<div class="link-box">
-				<a href="https://search.cac.gov.ng/home" target="_blank">View</a>
+				<a href="https://search.cac.gov.ng/home" target="_blank">View Site</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
