--- a/index.html
+++ b/index.html
@@ -428,11 +428,11 @@
 						<div class="portfolio-grid grid-3">
 							<div class="project-box tile scale-anm web graphic" >
 								<div class="port-pic">
-									<img src="assets/img/portfolio/f-public-search.png" alt="thumb">
+									<img src="assets/img/portfolio/public-search.png" alt="thumb">
 									<div class="port-overlay">
 										<div class="port-content">
 											<h5>01. CAC Public Search</h5>
-											<span>Web Design</span>
+											<span>Web Application</span>
 											<a href="#modal-01" class="open-popup">
 												<i class="fas fa-eye"></i>
 											</a>
@@ -440,13 +440,13 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm mobile wordpress">
+							<div class="project-box tile scale-anm web wordpress">
 								<div class="port-pic">
-									<img src="assets/img/portfolio/2.jpg" alt="thumb">
+									<img src="assets/img/portfolio/pre-inc.png" alt="thumb">
 									<div class="port-overlay">
 										<div class="port-content">
-											<h5>02. Cteative Frame</h5>
-											<span>Web Design</span>
+											<h5>02. CAC Pre Incorporation</h5>
+											<span>Web Application</span>
 											<a href="#modal-02" class="open-popup">
 												<i class="fas fa-eye"></i>
 											</a>
@@ -482,7 +482,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm web" >
+							<div class="project-box tile scale-anm mobile" >
 								<div class="port-pic">
 									<img src="assets/img/portfolio/5.jpg" alt="thumb">
 									<div class="port-overlay">
@@ -496,7 +496,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm bcards" >
+							<div class="project-box tile scale-anm mobile" >
 								<div class="port-pic">
 									<img src="assets/img/portfolio/6.jpg" alt="thumb">
 									<div class="port-overlay">
@@ -522,13 +522,13 @@
 
 		<div id="modal-01" class="popup-modal mfp-hide" >
 
-			<img class="scale-with-grid" src="assets/img/portfolio/1.jpg" alt="" />
+			<img class="scale-with-grid" src="assets/img/portfolio/public-search.png" alt="" />
 
 			<div class="description-box">
-			   <h4>Coffee Cup</h4>
-			   <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi
-				  elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			   <h4>CAC Public Search</h4>
+			   <p>This application allows you to search for existing entities in Nigeria. Via the search, 
+				   you will be able to see the company's status, board of directors and other important information of the company.</p>
+			   <span class="categories"><i class="fa fa-tag"></i>Government, Administrative, Webdesign</span>
 			</div>
 			<div class="link-box">
 				<a href="https://search.cac.gov.ng/home" target="_blank">View Site</a>
@@ -537,16 +537,16 @@
 		</div>
 		<div id="modal-02" class="popup-modal mfp-hide" >
 
-			<img class="scale-with-grid" src="assets/img/portfolio/1.jpg" alt="" />
+			<img class="scale-with-grid" src="assets/img/portfolio/pre-inc.png" alt="" />
 
 			<div class="description-box">
-			   <h4>Coffee Cup</h4>
-			   <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi
-				  elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+			   <h4>CAC Pre Incorporation</h4>
+			   <p>Company Registration Portal (CRP) of the Corporate Affairs Commission, Federal Republic of Nigeria.
+				It allows you to register an entity from the comfort of your home.</p>
 			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 			</div>
 			<div class="link-box">
-				<a href="http://www.behance.net" target="_blank">Details</a>
+				<a href="https://pre.cac.gov.ng/home" target="_blank">View Site</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
