--- a/index.html
+++ b/index.html
@@ -468,13 +468,13 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm mobile">
+							<div class="project-box tile scale-anm web">
 								<div class="port-pic">
-									<img src="assets/img/portfolio/4.jpg" alt="thumb">
+									<img src="assets/img/portfolio/primsol.png" alt="thumb">
 									<div class="port-overlay">
 										<div class="port-content">
-											<h5>04. Cteative Frame</h5>
-											<span>Web Design</span>
+											<h5>04. Primsol</h5>
+											<span>Web Application</span>
 											<a href="#modal-04" class="open-popup">
 												<i class="fas fa-eye"></i>
 											</a>
@@ -484,11 +484,11 @@
 							</div>
 							<div class="project-box tile scale-anm mobile" >
 								<div class="port-pic">
-									<img src="assets/img/portfolio/5.jpg" alt="thumb">
+									<img src="assets/img/portfolio/case-manager.png" alt="thumb">
 									<div class="port-overlay">
 										<div class="port-content">
-											<h5>05. Cteative Frame</h5>
-											<span>Web Design</span>
+											<h5>05. Case Manager</h5>
+											<span>Web Application</span>
 											<a href="#modal-05" class="open-popup">
 												<i class="fas fa-eye"></i>
 											</a>
@@ -526,7 +526,7 @@
 
 			<div class="description-box">
 			   <h4>CAC Public Search</h4>
-			   <p>This application allows you to search for existing entities in Nigeria. Via the search, 
+			   <p>CAC Public Search allows you to search for existing entities in Nigeria. Via the search, 
 				   you will be able to see the company's status, board of directors and other important information of the company.</p>
 			   <span class="categories"><i class="fa fa-tag"></i>Government, Administrative, Webdesign</span>
 			</div>
@@ -567,31 +567,31 @@
 		</div>
 		<div id="modal-04" class="popup-modal mfp-hide" >
 
-			<img class="scale-with-grid" src="assets/img/portfolio/1.jpg" alt="" />
+			<img class="scale-with-grid" src="assets/img/portfolio/primsol.png" alt="" />
 
 			<div class="description-box">
-			   <h4>Coffee Cup</h4>
-			   <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi
-				  elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			   <h4>Primsol</h4>
+			   <p>Primsol is an all-in-one legal management software for your law practice, 
+				   providing all resources you need to increase efficiency and scale your legal research.</p>
+			   <span class="categories"><i class="fa fa-tag"></i>Legal, Webdevelopment</span>
 			</div>
 			<div class="link-box">
-				<a href="http://www.behance.net" target="_blank">Details</a>
+				<a href="https://primsol.lawpavilion.com/" target="_blank">View Site</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
 		<div id="modal-05" class="popup-modal mfp-hide" >
 
-			<img class="scale-with-grid" src="assets/img/portfolio/1.jpg" alt="" />
+			<img class="scale-with-grid" src="assets/img/portfolio/case-manager.png" alt="" />
 
 			<div class="description-box">
-			   <h4>Coffee Cup</h4>
-			   <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi
-				  elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			   <h4>Case Manager</h4>
+			   <p>Case manager caters to the need of any legal practitioner. Irrespective of the size of your practice, 
+				   case manager gives you the ability to oversee every activity going on in your firm. Track progress and team deliverables, generate instant invoices, and organize your schedules and documents, all in one place.</p>
+			   <span class="categories"><i class="fa fa-tag"></i>Legal, Webdevelopment</span>
 			</div>
 			<div class="link-box">
-				<a href="http://www.behance.net" target="_blank">Details</a>
+				<a href="https://casemanager.lawpavilion.com/" target="_blank">View Site</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
