Update portfolio section

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 										Modupe Ade-Onojobi
 									</h5>
 									<h2 class="hero-title">
-										I’m a Web Developer										
+										I’m a Software Engineer										
 									</h2>
 									<div class="header-description">
 										<p>
@@ -187,22 +187,27 @@
 							<div class="about-right wow fadeInRight" data-wow-duration="4s" data-wow-delay=".2s">
 								<div class="about-right-content">
 									<h5 class="about-sub-title">
-										about Us
+										about Me
 									</h5>
 									<h2 class="about-title">
-										Hi, I’m Modupe Ade-Onojobi
+										Hi, I am Modupe Ade-Onojobi
 									</h2>
 									<h5 class="about-title-3">
-										Web developer based in Abuja, Nigeria
+										Software Engineer based in Abuja, Nigeria
 									</h5>
 									<div class="about-txt mb-30">
 										<p>
-											I am a Frontend Developer and Backend Developer aka Full Stack Developer. I have 2 years of experience working with organizations in the software and engineering sector. I am happy to take client ideas and transform it to unique user-friendly web applictions.
+											I am a Full Stack Developer. I have 2 years of experience working with organizations in the software and engineering sector.
 										</p>
 										<p class="mb-0">
 											I'm highly skilled in Web App Development. I also write unit and integration test.
 											When I am not coding, I'm watching movies or hanging out with friends.
 										</p>
+
+										<p class="mb-0">
+											I am happy to take client ideas and transform it to unique user-friendly web applictions.
+										</p>
+		
 									</div>
 									<div class="about-btns">
 										<a href="assets/doc/Modupe Ade-Onojobi.pdf" download="" target="_blank" class="tm-btn-2">
@@ -249,9 +254,9 @@
 									</i>
 								</div>
 								<div class="service-content">
-									<h4>Web Development</h4>
+									<h4>Mobile Development</h4>
 									<p>
-										Build, and maintain user-friendly and easy to use website and web application.
+										Build and maintain highly scalable mobile applications that are cross-platform user friendly, ease to use and functional.
 									</p>
 								</div>
 							</div>
@@ -382,11 +387,11 @@
 						<div class="fun-fact col-md-4 col-sm-6">
 							<div class="fun-desc">
 								<span class="medium">
-									Lines of
+									Happy
 									<br>
-									Code
+									Clients
 								</span>
-								<p class="timer" data-count="+" data-to="50000" data-speed="3000">50000</p>
+								<p class="timer" data-count="+" data-to="10" data-speed="3000">10</p>
 							</div>
 						</div>
 					</div>
@@ -531,7 +536,7 @@
 			   <span class="categories"><i class="fa fa-tag"></i>Government, Administrative, Webdesign</span>
 			</div>
 			<div class="link-box">
-				<a href="https://search.cac.gov.ng/home" target="_blank">View Site</a>
+				<a href="https://search.cac.gov.ng/home" target="_blank">View Application</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
@@ -546,7 +551,7 @@
 			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 			</div>
 			<div class="link-box">
-				<a href="https://pre.cac.gov.ng/home" target="_blank">View Site</a>
+				<a href="https://pre.cac.gov.ng/home" target="_blank">View Application</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
@@ -561,7 +566,7 @@
 			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 			</div>
 			<div class="link-box">
-				<a href="https://post.cac.gov.ng/login" target="_blank">View Site</a>
+				<a href="https://post.cac.gov.ng/login" target="_blank">View Application</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
@@ -576,7 +581,7 @@
 			   <span class="categories"><i class="fa fa-tag"></i>Legal, Webdevelopment</span>
 			</div>
 			<div class="link-box">
-				<a href="https://primsol.lawpavilion.com/" target="_blank">View Site</a>
+				<a href="https://primsol.lawpavilion.com/" target="_blank">View Application</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
@@ -591,7 +596,7 @@
 			   <span class="categories"><i class="fa fa-tag"></i>Legal, Webdevelopment</span>
 			</div>
 			<div class="link-box">
-				<a href="https://casemanager.lawpavilion.com/" target="_blank">View Site</a>
+				<a href="https://casemanager.lawpavilion.com/" target="_blank">View Application</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
