Update portfolio section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											I write clean, elegant and efficient code for the client side and server-side.
 										</p>									
 									</div>
-									<div class="hero-btn">
+									<div class="hero-btn mb-30">
 										<a href="#work" class="tm-btn-1 smooth-menu">
 											Go To Portfolio <i class="fas fa-chevron-right"></i>
 										</a>
@@ -271,7 +271,7 @@
 								<div class="service-content">
 									<h4>Frontend</h4>
 									<p>
-										Build and maintain the client side of website and web application with highly reusable and scalable code.
+										Build and maintain the client side of website and web application with highly reusable, testable and scalable code.
 									</p>
 								</div>
 							</div>
@@ -286,7 +286,7 @@
 								<div class="service-content">
 									<h4>Backend</h4>
 									<p>
-										Write efficient and highly scalable code for the server side using TDD approach.
+										Write efficient and highly scalable and maintainable code that is easy to maintain and debug using TDD approach.
 									</p>
 								</div>
 							</div>
@@ -487,7 +487,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm mobile" >
+							<div class="project-box tile scale-anm web" >
 								<div class="port-pic">
 									<img src="assets/img/portfolio/case-manager.png" alt="thumb">
 									<div class="port-overlay">
@@ -501,13 +501,13 @@
 									</div>
 								</div>
 							</div>
-							<div class="project-box tile scale-anm mobile" >
+							<div class="project-box tile scale-anm  mobile" >
 								<div class="port-pic">
-									<img src="assets/img/portfolio/6.jpg" alt="thumb">
+									<img src="assets/img/portfolio/elsrt-plus.png" alt="thumb">
 									<div class="port-overlay">
 										<div class="port-content">
-											<h5>06. Cteative Frame</h5>
-											<span>Web Design</span>
+											<h5>06. ELSRT +</h5>
+											<span>Mobile Development</span>
 											<a href="#modal-06" class="open-popup">
 												<i class="fas fa-eye"></i>
 											</a>
@@ -602,16 +602,18 @@
 		</div>
 		<div id="modal-06" class="popup-modal mfp-hide" >
 
-			<img class="scale-with-grid" src="assets/img/portfolio/1.jpg" alt="" />
+			<img class="scale-with-grid" src="assets/img/portfolio/elsrt-plus.png" alt="" />
 
 			<div class="description-box">
-			   <h4>Coffee Cup</h4>
-			   <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi
-				  elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-			   <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			   <h4>ELSRT +</h4>
+			   <p>E-lab Sample Referral Tracking Software (ELSRT) is a software-based solution with features that support
+				a modern laboratory's operations. Key features include—but are not limited to—workflow and data
+				tracking support, flexible architecture, and data exchange interfaces, which fully support its use in
+				regulated environments.</p>
+			   <span class="categories"><i class="fa fa-tag"></i>Medical, Mobile</span>
 			</div>
 			<div class="link-box">
-				<a href="http://www.behance.net" target="_blank">Details</a>
+				<a href="https://play.google.com/store/apps/details?id=com.seamhealth.elsrtplus&hl=en&gl=US" target="_blank">Playstore</a>
 				<a class="popup-modal-dismiss mfp-close">Close</a>
 			</div>
 		</div>
@@ -672,7 +674,15 @@
 								</div>
 							</div>
 						</div>
-						<form class="contact-form" id="contact-form" action="https://themetum.com/koyta/koyta-two/php/contact.php" method="POST">	
+						<div class="col-md-12 mb-100 contact-sub-btn send-mail text-center wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".6s">
+							<button class="tm-btn-2">
+								<a class="btn" href="mailto:modupeadeonojobi@gmail.com">Say Hello</a> 
+								<i class="fas fa-chevron-right"></i>
+								<!-- <button class="submit"></button> -->
+
+							</button>
+						</div>
+						 <!-- <form class="contact-form" id="contact-form" action="https://themetum.com/koyta/koyta-two/php/contact.php" method="POST">	
 							<h4 class="contact-tl">Send Message</h4>							
 							<div class="row g-4">
 								<div class="col-md-6 wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".3s">
@@ -697,7 +707,7 @@
 									<p class="form-message"></p>
 								</div>
 							</div>
-						</form>
+						</form>  -->
 					</div>
 				</div>
 			</div>
