--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 	<meta name="author" content="Portfolio Website">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-PZS588X');</script>
+	<!-- End Google Tag Manager -->
+
 	<!-- Place favicon.ico in the root directory -->
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 	<!-- ========== Start Stylesheet ========== -->
@@ -30,7 +38,11 @@
   
 </head>
 
-<body id="bdy" class="scroll-style">		
+<body id="bdy" class="scroll-style">	
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZS588X"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->	
 
 	<!-- Start PreLoader 
     ============================================= -->
