--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 									</h2>
 									<div class="header-description">
 										<p>
-											I'm a web developer based in Abuja, Nigeria.
+											I'm a Software Engineer based in Abuja, Nigeria.
 											I write clean, elegant and efficient code for the client side and server-side.
 										</p>									
 									</div>
