Update about me section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta charset="utf-8">
 	<title>Modupe Ade-Onojobi Portfolio Website</title>
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="description" content="Modupe Ade-Onojobi - A Professional Full stack Developer based in Abuja">
+	<meta name="description" content="Modupe Ade-Onojobi - A Professional Software Engineer Developer based in Abuja">
 	<meta name="keywords"
-	   content="Portfolio Website, Full stack Development, Backend Development, Female Developer, Frontend Development, Web Development" />
+	   content="Portfolio Website, Full stack Development, Backend Development, Female Developer, Frontend Development, Software Engineer, Java Engineer, Web Development" />
 	<meta name="author" content="Portfolio Website">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -209,15 +209,16 @@
 									</h5>
 									<div class="about-txt mb-30">
 										<p>
-											I am a Full Stack Developer. I have 2 years of experience working with organizations in the software and engineering sector.
+											A Software Engineer with 2 years of experience in the IT industry, specializing in back-end and front-end application development. 
+											Proven track record of working on a variety of projects, from small scale websites to large scale web applications.
 										</p>
 										<p class="mb-0">
-											I'm highly skilled in Web App Development. I also write unit and integration test.
-											When I am not coding, I'm watching movies or hanging out with friends.
+											Strong experience with various programming languages, databases, and frameworks. A problem solver with a can-do attitude 
+											and a willingness to go the extra mile to get the job done.
 										</p>
 
 										<p class="mb-0">
-											I am happy to take client ideas and transform it to unique user-friendly web applictions.
+											When I am not coding, I'm watching movies or hanging out with friends.
 										</p>
 		
 									</div>
