--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 		
 									</div>
 									<div class="about-btns">
-										<a href="assets/doc/Modupe Ade-Onojobi (Eng).pdf" download="" target="_blank" class="tm-btn-2">
+										<a href="assets/doc/Modupe Ade-Onojobi (SE).pdf" download="" target="_blank" class="tm-btn-2">
 											Download CV 
 											<i class="fas fa-arrow-down"></i>
 										</a>
-										<a href="assets/doc/Modupe Ade-Onojobi (Eng).pdf" target="_blank" class="tm-btn-2">
+										<a href="assets/doc/Modupe Ade-Onojobi (SE).pdf" target="_blank" class="tm-btn-2">
 											<i class="fas fa-print"></i> 
 											Print Cv
 										</a>
