--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@
 						<div class="progress-box">
 							<h5>PostgreSQL & Mysql</h5>
 						</div>
+						<div class="progress-box">
+							<h5>Jenkins</h5>
+						</div>
 					</div>
 					<div class="col-xl-4 col-md-4">
 						<div class="progress-box">
@@ -344,6 +347,9 @@
 						</div>
 						<div class="progress-box">
 							<h5>Karma & Jasmine</h5>
+						</div>
+						<div class="progress-box">
+							<h5>Docker</h5>
 						</div>
 					</div>
 					
@@ -361,6 +367,9 @@
 							</div>
 							<div class="progress-box">
 								<h5>Express.js </h5>
+							</div>
+							<div class="progress-box">
+								<h5>AWS</h5>
 							</div>
 							<!-- End Progressbar -->
 						</div>
